# gtest-parameterized-lib

./: .gitignore  CMakeLists.txt  README.de.md  README.es.md  README.fr.md  README.it.md  README.ja.md  README.ko.md  README.md  README.pt-BR.md  README.zh.md  additional_test.cpp  example_common_header.h  gtest_generator.h  intensive_test.cpp  mygen_test.cpp  test_aligned_counting.cpp  test_aligned_debug.cpp  test_aligned_mode.cpp  test_array_compare.cpp  test_class_friend_access.cpp  test_define_macros.cpp  test_error_handling.cpp  test_friend_access.cpp  test_friend_generation_modes.cpp  test_friend_modes_working.cpp  test_friend_multi_file1.cpp  test_friend_multi_file2.cpp  test_friend_simple_gen.cpp  test_generation_comparison.cpp  test_mode_counts.cpp  test_modes_verification.cpp  test_mygen.cpp  test_private_access.cpp  test_simple_aligned.cpp
.claude/: settings.local.json
